--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="popup" style="display: none; position: fixed; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,0.8); z-index: 2; cursor: pointer;">
         <div style="margin-left:25%; margin-top: 50px; background-color: DarkPurple; color: white; border-radius: 10px; width: 50%; max-height: 80vh; padding: 20px; position: relative; border: 2px solid #AF5EFF; overflow-y: auto;">
             <!-- Exit button -->
-            <button id="exitButton" style="position: absolute; right: 2%; top: 15px; background: none; border: none; font-size: 28px; color: white; cursor: pointer; font-weight: bold;">×</button>
+            <button id="exitButton" style="position: absolute; right: 40px; top: 15px; background: none; border: none; font-size: 28px; color: white; cursor: pointer; font-weight: bold;">×</button>
             <div id="lyricsContainer" style="text-align: center; padding-top: 30px;"></div>
         </div>
     </div>
@@ -108,7 +108,7 @@
             <div class = "banner" style =  "background: url('bg.png');margin-top:30px">
                 <nav style = "margin-top:-20px">
                     <ul>
-
+                        <li><a href="https://shirleyproject.com/">BACK</a></li>
                         <li> <a id="musicTab" style = " color: #AF5EFF; border-bottom: 3px solid #AF5EFF">MUSIC</a></li>
                         <li><a id="aboutTab">ABOUT ME</a></li>
                     </ul>
