--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="popup" style="display: none; position: fixed; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,0.8); z-index: 2; cursor: pointer;">
         <div style="margin-left:25%; margin-top: 50px; background-color: DarkPurple; color: white; border-radius: 10px; width: 50%; max-height: 80vh; padding: 20px; position: relative; border: 2px solid #AF5EFF; overflow-y: auto;">
             <!-- Exit button -->
-            <button id="exitButton" style="position: absolute; right: 40px; top: 15px; background: none; border: none; font-size: 28px; color: white; cursor: pointer; font-weight: bold;">×</button>
+            <button id="exitButton" style="position: absolute; right: 10px; top: 15px; background: none; border: none; font-size: 28px; color: white; cursor: pointer; font-weight: bold;">×</button>
             <div id="lyricsContainer" style="text-align: center; padding-top: 30px;"></div>
         </div>
     </div>
@@ -122,7 +122,7 @@
                     </nav>
                     <div class = "artistprofile" style = "padding:30px;">
                         <h1> SHIRLY</h1>
-                        <p>I like to write about true human experiences.</p>
+                        <p>poems to songs, songs to story</p>
                     </div>
 
                 <div class="buttons">
@@ -470,12 +470,18 @@
                 <div class="dot"></div>
             </div>
             <span id="currentEnd">0:00</span>
-    
+
             <div class="vol">
                 <i class="bi bi-volume-down-fill" id="vol_icon"></i>
                 <input type="range" id="vol" min="0" value="30" max="100">
                 <div class="vol_bar"></div>
                 <div class="dot" id="vol_dot"></div>
+            </div>
+
+            <!-- Mobile-only buttons for Lyrics and About -->
+            <div class="mobile-player-buttons">
+                <button class="mobile-lyrics-btn" id="lyricsButtonMobile">Lyrics</button>
+                <button class="mobile-about-btn" id="songsButtonMobile">Meanings</button>
             </div>
         </div>
 
