--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="Logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Lyrical</title>
+    <title>Lyrical - [Shirly]</title>
 </head>
 
 <body>
@@ -160,6 +161,7 @@
             <!-- Music Section (Visible by default) -->
             <div id="musicContent">
             <div class="popular_song">
+                <!-- Alice In Love Collection -->
                 <div class="h4">
                     <h4 style = "font-size: 20px">A romantic but she gave it up... this is <i>Alice In Love</i></h4>
                     <div class="btn_s">
@@ -168,100 +170,11 @@
                     </div>
                 </div>
                 <div class="pop_song" id="pop_song_1">
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="10"></i>
-                        </div>
-                        <h5>love you forever
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="11"></i>
-                        </div>
-                        <h5>early morning talking
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="12"></i>
-                        </div>
-                        <h5>best wishes
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="13"></i>
-                        </div>
-                        <h5>cherry blossom
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="14"></i>
-                        </div>
-                        <h5>blade runner
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="15"></i>
-                        </div>
-                        <h5>wes street
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="16"></i>
-                        </div>
-                        <h5>can you
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="24"></i>
-                        </div>
-                        <h5>cool girls
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/Alice in Love.jpg" alt="alice">
-                            <i class="bi playListPlay bi-play-circle-fill" id="25"></i>
-                        </div>
-                        <h5>alice in love
-                            <br>
-                            <div class="subtitle">alice in love</div>
-                        </h5>
-                    </li>
-
-
+                    <!-- Songs will be populated by JavaScript -->
                 </div>
-                    <div class="h4">
+
+                <!-- 3AM Collection -->
+                <div class="h4">
                     <h4 style = "font-size: 20px; margin-top:25px"> Whatever you do, don't leave me alone... this is <i>3AM</i></h4>
                     <div class="btn_s">
                         <i id="left_scroll_2" class="bi bi-arrow-left-short scroll-arrow" style = "font-size:30px"></i>
@@ -269,176 +182,19 @@
                     </div>
                 </div>
                 <div class="pop_song" id="pop_song_2">
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="17"></i>
-                        </div>
-                        <h5>LONELY
-                            <br>
-                            <div class="subtitle">3AM</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="18"></i>
-                        </div>
-                        <h5>TRIPPING ON ACID
-                            <br>
-                            <div class="subtitle">3AM</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="19"></i>
-                        </div>
-                        <h5>NOT COMING HOME
-                            <br>
-                            <div class="subtitle">3AM</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="20"></i>
-                        </div>
-                        <h5>HANDS LOW
-                            <br>
-                            <div class="subtitle">3AM</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="21"></i>
-                        </div>
-                        <h5>LAST WORDS
-                            <br>
-                            <div class="subtitle">3AM</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="22"></i>
-                        </div>
-                        <h5>MISSING GIRL
-                            <br>
-                            <div class="subtitle">3AM</div>
-                        </h5>
-                    </li>
-                    <li class="songItem">
-                        <div class="img_play">
-                            <img src="img/3Am.jpg" alt="3am">
-                            <i class="bi playListPlay bi-play-circle-fill" id="23"></i>
-                        </div>
-                        <h5>OZONE
-                            <br>
-                            <div class="subtitle">3AM [Chase Atlantic]</div>
-                        </h5>
-                    </li>
-                                    </div>
-                    
-                    <div class="h4">
-                        <h4 style = "font-size: 20px; margin-top:25px"> Cool as misfits... this is <i>ANTISOCIAL SOCIAL CLUB</i></h4>
-                        <div class="btn_s">
-                            <i id="left_scroll_3" class="bi bi-arrow-left-short scroll-arrow" style = "font-size:30px"></i>
-                            <i id="right_scroll_3" class="bi bi-arrow-right-short scroll-arrow" style = "font-size:30px"></i>
-                        </div>
+                    <!-- Songs will be populated by JavaScript -->
+                </div>
+
+                <!-- Antisocial Social Club Collection -->
+                <div class="h4">
+                    <h4 style = "font-size: 20px; margin-top:25px"> Cool as misfits... this is <i>ANTISOCIAL SOCIAL CLUB</i></h4>
+                    <div class="btn_s">
+                        <i id="left_scroll_3" class="bi bi-arrow-left-short scroll-arrow" style = "font-size:30px"></i>
+                        <i id="right_scroll_3" class="bi bi-arrow-right-short scroll-arrow" style = "font-size:30px"></i>
                     </div>
-                    <div class="pop_song" id="pop_song_3">
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="1"></i>
-                            </div>
-                            <h5>Come on
-                                <br>
-                                <div class="subtitle">Antisocial Social Club ft. Torin!</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="2"></i>
-                            </div>
-                            <h5>Volcano
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="3"></i>
-                            </div>
-                            <h5>Night Shift
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="4"></i>
-                            </div>
-                            <h5>Stargazing
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="5"></i>
-                            </div>
-                            <h5>Surfin
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="6"></i>
-                            </div>
-                            <h5>Sunbeam
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="7"></i>
-                            </div>
-                            <h5>Broken Heart
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="8"></i>
-                            </div>
-                            <h5>Iris City
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
-                        <li class="songItem">
-                            <div class="img_play">
-                                <img src="img/AntiSocialClub.jpg" alt="antisocial">
-                                <i class="bi playListPlay bi-play-circle-fill" id="9"></i>
-                            </div>
-                            <h5>High speed Chasing
-                                <br>
-                                <div class="subtitle">Antisocial Social Club</div>
-                            </h5>
-                        </li>
+                </div>
+                <div class="pop_song" id="pop_song_3">
+                    <!-- Songs will be populated by JavaScript -->
                                         </div>
                 <!-- <h4> Albums and EP </h4>
                 <div class = "albumcontainer">
